--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -88,8 +88,9 @@
 }
 
 .i-img {
-  
-  width: 100%;
+  top: 15%;
+  right: -0%;
+  width: 80%;
   object-fit: cover;
   position: absolute;
 }
@@ -99,9 +100,10 @@
   background-color: #59b256;
   width: 100%;
   height: 100%;
+  display: flex;
   overflow: hidden;
   position: absolute;
-  top: 0;
+  top: 00px;
   right: 0;
 }
 
