--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -2,7 +2,7 @@
   width: 30%;
   height: 40vh;
   margin: 20px 10px;
-  border: 2px solid white;
+  border: 2px solid rgb(38, 32, 32);
   border-radius: 10px 10px 0px 0px;
   overflow: hidden;
 }
